--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.53.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
