--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^4.42.0",
+    "@vercel/speed-insights": "^1.3.1",
     "ansis": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
